# tpp-mlir

.github/workflows/: tpp-benchmark.yml
benchmarks/: check-cpuid.c  driver.py
benchmarks/config/base/: base.json
benchmarks/config/omp/: mlir-bf16.json  mlir-fp32-vector-to-kernel.json  mlir-fp32.json  torch-dynamo.json
build_tools/: llvm_version.txt
include/TPP/: PassBundles.td  Passes.h  Passes.td
lib/TPP/: CMakeLists.txt  DefaultPipeline.cpp  DefaultTppPasses.cpp
lib/TPP/PassBundles/: LowLevelParallelization.cpp  VectorToKernel.cpp
lib/TPP/Runner/: MLIRBench.cpp
lib/TPP/Transforms/: BrgemmLinalgTiling.cpp  CMakeLists.txt  CombineXsmmPass.cpp  IntelAMXTileConfig.cpp  LinalgTiling.cpp  LinalgVectorize.cpp  LoopExpansion.cpp  SCFParallelLoopTiling.cpp  VectorContract.cpp  VectorContractToAMX.cpp  VectorContractToAVX2BF16.cpp  VectorContractToBF16DotProduct.cpp  VectorContractToBF16KERNELS.cpp  VectorContractToMicroKernels.cpp  VectorTiling.cpp  (+3 more)
python/: CMakeLists.txt
runtime/Xsmm/: XsmmRunnerUtils.cpp  XsmmRunnerUtils.h
scripts/ci/: setup_gpu_env.sh
scripts/github/: build_tpp.sh
test/: CMakeLists.txt  lit.site.cfg.py.in
test/Integration/: tpp-run-splat-tensor.mlir
test/Passes/: pass-tile-brgemm-linalg-matmul.mlir  pass-tile-linalg-chained-gemm.mlir  pass-tile-linalg-gemm.mlir  pass-vector-contract-to-bf16dp.mlir  pass-vectorization.mlir
tools/: CMakeLists.txt
tools/check-cpuid/: CMakeLists.txt  check-cpuid.c
tools/check-vpdpbssd/: CMakeLists.txt  check-vpdpbssd.cpp
tools/tpp-opt/: CMakeLists.txt
tools/tpp-run/: CMakeLists.txt
(+23 files in other folders)
